# codecs2

./: README.md  pyproject.toml
src/: codecs2.py
