[project]
name = "codecs2"
version = "0.1.0"
description = "A new interface for bytes/str codecs"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3"
]
dependencies = [ ]
license = {file = "LICENSE.txt"}

[[project.authors]]
name = "Karl Knechtel"
email = "zahlman@proton.me"

[project.urls]
bugs = "https://github.com/zahlman/codecs2/issues"
changelog = "https://github.com/zahlman/codecs2/blob/master/changelog.md"
homepage = "https://github.com/zahlman/codecs2"
